--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -617,164 +617,41 @@ select{
 
 /*-------------------- DIRECTORY FILE ---------------*/
 .members1{
+    grid-row: 1;
     grid-column: 1/13;
     text-align: center;
     font-size: 40px;
     margin-top: 30px;
     margin-bottom: 0px;
 }
-#the-file{
+.area{
+    grid-column: 1/13;
     grid-row: 2;
-    grid-column: 4/10;
+    background-color: #000;
+    padding: 2%;
+    width: 45%;
+    text-align: center;
+    font-size: 36px;
 }
-.creative-sign-solutions{
+#the-file{
+    grid-column: 1/13;
+    width: 100%;
+}
+.grid{
+    grid-column: 1/13;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+}
+.grid section{
+    margin: 0.25rem;
+    padding: 0.35rem;
+}
+.grid section div{
     border: 3px solid #660708;
     background-color: #D3D3D3;
+    height: 500px;
 }
-.creative-sign-solutions h2{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #660708;
-    color: #D3D3D3;
-    font-size: 40px;
-    margin: 0px;
-}
-.creative-sign-solutions p{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 8px;
-    font-size: 18px;
-}
-.creative-sign-solutions a{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 8px;
-    font-size: 18px;
-}
-.creative-sign-solutions img{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
-    padding: 8px;
-    width: 35%; 
-}
-.sharps-lawn-equipment--service{
-    border: 3px solid #660708;
-    background-color: #D3D3D3;
-    margin-top: 50px;
-}
-.sharps-lawn-equipment--service h2{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #660708;
-    color: #D3D3D3;
-    font-size: 40px;
-    margin: 0px;
-}
-.sharps-lawn-equipment--service p{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 8px;
-    font-size: 18px;
-}
-.sharps-lawn-equipment--service a{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 8px;
-    font-size: 18px;
-}
-.sharps-lawn-equipment--service img{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
-    padding: 8px;
-    width: 35%; 
-}
-
-
-.gibsons-electrical-and-lighting {
-    border: 3px solid #660708;
-    background-color: #D3D3D3;
-    margin-top: 50px;
-}
-
-.gibsons-electrical-and-lighting h2 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #660708;
-    color: #D3D3D3;
-    font-size: 40px;
-    margin: 0px;
-}
-
-.gibsons-electrical-and-lighting p,
-.gibsons-electrical-and-lighting a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 8px;
-    font-size: 18px;
-}
-
-.gibsons-electrical-and-lighting img {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
-    padding: 8px;
-    width: 35%;
-}
-
-.carolina-roofing-pros {
-    border: 3px solid #660708;
-    background-color: #D3D3D3;
-    margin-top: 50px;
-}
-
-.carolina-roofing-pros h2 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #660708;
-    color: #D3D3D3;
-    font-size: 40px;
-    margin: 0px;
-}
-
-.carolina-roofing-pros p,
-.carolina-roofing-pros a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 8px;
-    font-size: 18px;
-}
-
-.carolina-roofing-pros img {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
-    padding: 8px;
-    width: 27%;
-}
-
-.attornys-at-law-benbow-davidson--martin-pc {
-    border: 3px solid #660708;
-    background-color: #D3D3D3;
-    margin-top: 50px;
-}
-
-.attornys-at-law-benbow-davidson--martin-pc h2 {
+.grid section div h2{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -783,89 +660,65 @@ select{
     font-size: 30px;
     margin: 0px;
 }
-
-.attornys-at-law-benbow-davidson--martin-pc p,
-.attornys-at-law-benbow-davidson--martin-pc a {
+.grid section div p{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 8px;
+    padding: 5px;
     font-size: 18px;
 }
-
-.attornys-at-law-benbow-davidson--martin-pc img{
+.grid section div a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+    font-size: 18px;
+}
+.grid section div img{
     display: flex;
     justify-content: center;
     align-items: center;
     margin: auto;
-    padding: 8px;
-    width: 25%;
+    padding: 5px;
+    width: 35%; 
 }
-
-.statesville-family-practice {
-    border: 3px solid #660708;
-    background-color: #D3D3D3;
-    margin-top: 50px;
+.list img{
+    display: none;
 }
-
-.statesville-family-practice h2 {
+.list{
     display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #660708;
-    color: #D3D3D3;
-    font-size: 40px;
+    flex-direction: column;
+}
+.list section{
+    display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+	margin: 0;
+	padding: 0.25rem;
+}
+.list section div h2{
     margin: 0px;
+    grid-column: 1;
+    grid-row: 1;
 }
-
-.statesville-family-practice p,
-.statesville-family-practice a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 8px;
-    font-size: 18px;
-}
-
-.statesville-family-practice img {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
-    padding: 8px;
-    width: 27%;
-}
-
-.tone-studios {
-    border: 3px solid #660708;
-    background-color: #D3D3D3;
-    margin-top: 50px;
-}
-
-.tone-studios h2 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #660708;
-    color: #D3D3D3;
-    font-size: 40px;
+.list section div p{
     margin: 0px;
+    grid-column: 2/5;
+    grid-row: 1;
 }
-
-.tone-studios p,
-.tone-studios a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 8px;
-    font-size: 18px;
+.list section div a{
+    margin: 0px;
+    display: none;
 }
-
-.tone-studios img {
+.creative-sign-solutions{
+    grid-column: 1/5;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
-    padding: 8px;
-    width: 23%;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
+}
+.address{
+    display: none;
+}
+.scope{
+    display: none;
 }
