--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -700,25 +700,15 @@ select{
     grid-column: 1;
     grid-row: 1;
 }
-.list section div p{
-    margin: 0px;
-    grid-column: 2/5;
-    grid-row: 1;
-}
 .list section div a{
     margin: 0px;
     display: none;
 }
-.creative-sign-solutions{
+.list section div{
     grid-column: 1/5;
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
     width: 100%;
     justify-content: space-between;
 }
-.address{
-    display: none;
-}
-.scope{
-    display: none;
-}
+
