--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -7,29 +7,32 @@
     header img{
         grid-column: 1;
         grid-row: 1/3;
-        height: 70%;
+        height: 55%;
         margin-left: auto;
         padding-right: 20px;
+        max-width: 100%;
     }
     header h1{
-        grid-column: 1/4;
-        grid-row: 1;
-        padding-left: 40px;
         text-align: center;
+        width: 100%;
     }
     header nav{
         grid-row: 2;
         grid-column: 2/3;
         text-align: center;
         margin: 0px;
+        width: auto;
     }
     .link{
         display: flex;
         flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
     }
     header a{
-        padding: 0px;
-        margin: 0px;
+        margin-bottom: 8px;
+        margin-left: 0px;
     }
     main{
     grid-template-rows: repeat(5,auto);
