--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -90,7 +90,6 @@ main img{
     text-align: center;
     font-size: 30px;
 }
-
 .cards h2{
     grid-column: 1/4;
     grid-row: 1;
@@ -148,12 +147,20 @@ main img{
     font-family: 'Bebas Neue';
     font-size: 40px;
 }
+.spot{
+    grid-column: 1/13;
+    grid-row: 4;
+    font-size: xxx-large;
+    text-align: center;
+
+    margin: 10px;
+}
 .signs{
-    grid-row: 4/5;
+    grid-row: 5/6;
     grid-column: 1/5;
     border: 3px solid #000;
     display: grid;
-    grid-template-columns: auto;
+    grid-template-columns: 1fr;
     grid-template-rows: 80px auto auto;
     background-color: #D3D3D3;
 }
@@ -165,20 +172,23 @@ main img{
     padding-top: 20px;
     font-family: 'Bebas Neue';
     font-size: 40px;
+    margin-bottom: 15px;
 }
 .signs p{
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
     color: #000;
-    text-align: center;
-    margin: 20px;
+    margin: 10px;
     font-size: larger;
     font-family: 'EB Garamond';
 }
 .roofing{
     grid-column: 5/9;
-    grid-row: 4/5;
+    grid-row: 5/6;
     border: 3px solid #000;
     display: grid;
-    grid-template-columns: auto;
+    grid-template-columns: 1fr;
     grid-template-rows: 80px auto auto;
     background-color: #D3D3D3;
 }
@@ -190,20 +200,23 @@ main img{
     padding-top: 20px;
     font-family: 'Bebas Neue';
     font-size: 40px;
+    margin-bottom: 15px;
 }
 .roofing p{
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
     color: #000;
-    margin: 20px;
+    margin: 10px;
     font-size: larger;
     font-family: 'EB Garamond';
 }
 .land{
     grid-column: 9/13;
-    grid-row: 4/5;
+    grid-row: 5/6;
     border: 3px solid #000;
     display: grid;
-    grid-template-columns: auto;
+    grid-template-columns: 1fr;
     grid-template-rows: 80px auto auto;
     background-color: #D3D3D3;
 }
@@ -215,14 +228,31 @@ main img{
     padding-top: 20px;
     font-family: 'Bebas Neue';
     font-size: 40px;
+    margin-bottom: 15px;
 }
 .land p{
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
     color: #000;
-    margin: 20px;
+    margin: 10px;
     font-size: larger;
     font-family: 'EB Garamond';
 }
+/* this is for the spotlight companies*/
+.signs img{
+    margin: auto;
+    margin-bottom: 15px;
+}
+.roofing img{
+    margin: auto;
+    margin-bottom: 15px;
+}
+.land img{
+    margin: auto;
+    margin-bottom: 15px;
+}
+/*finished with the spotlight companies*/
 div{
     margin: auto;
 }
