--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -35,21 +35,26 @@
         margin-left: 0px;
     }
     main{
-    grid-template-rows: repeat(5,auto);
+    grid-template-rows: repeat(7,auto);
     }
     /* main img{
         height: 100%;
     } */
     .signs{
+        grid-row: 5;
         grid-column: 1/7;
+        grid-template-rows: auto auto auto;
     }
     .roofing{
+        grid-row: 5;
         grid-column: 7/13;
+        grid-template-rows: auto auto auto;
     }
     .land{
         grid-column: 1/13;
-        grid-row: 5;
+        grid-row: 6;
         margin-bottom: 27px;
+        grid-template-rows: auto auto auto;
     }
     .background-box{
        grid-column: 3;
@@ -175,17 +180,21 @@
         grid-column: 1/13;
         grid-row: 4/6;
     }
-    .signs{
-        grid-column: 1/13;
+    .spot{
         grid-row: 6;
     }
-    .roofing{
+    .signs{
         grid-column: 1/13;
         grid-row: 7;
     }
-    .land{
+    .roofing{
         grid-column: 1/13;
         grid-row: 8;
+    }
+    .land{
+        grid-column: 1/13;
+        grid-row: 9;
+        margin-bottom: 20px;
     }
     #menu{
         grid-column: 7;
