--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -89,6 +89,7 @@ main img{
     grid-template-rows: 80px auto 1fr;
     text-align: center;
     font-size: 30px;
+    margin: 5px;
 }
 .cards h2{
     grid-column: 1/4;
