--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -89,7 +89,6 @@ main img{
     grid-template-rows: 80px auto 1fr;
     text-align: center;
     font-size: 30px;
-    margin: 5px;
 }
 .cards h2{
     grid-column: 1/4;
@@ -124,7 +123,7 @@ main img{
     margin-top: initial;
     width: 100%;
 }
-.festivals{
+.festivals p{
     margin-left: 5px;
     margin-right: 5px;
 }
