--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -89,6 +89,7 @@ main img{
     grid-template-rows: 80px auto 1fr;
     text-align: center;
     font-size: 30px;
+    margin: 10px;
 }
 .cards h2{
     grid-column: 1/4;
@@ -137,6 +138,7 @@ main img{
     background-color: #D3D3D3;
     text-align: center;
     font-size: 30px;
+    margin: 10px;
 }
 .card1 h2{
     text-align: center;
