--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -89,7 +89,7 @@ main img{
     grid-template-rows: 80px auto 1fr;
     text-align: center;
     font-size: 30px;
-    margin: 10px;
+    margin: 30px;
 }
 .cards h2{
     grid-column: 1/4;
@@ -125,8 +125,10 @@ main img{
     width: 100%;
 }
 .festivals p{
-    margin-left: 5px;
-    margin-right: 5px;
+    margin: 30px;
+}
+#day-of-week p{
+    display: flex;
 }
 .card1{
     grid-row: 3/4;
@@ -138,7 +140,7 @@ main img{
     background-color: #D3D3D3;
     text-align: center;
     font-size: 30px;
-    margin: 10px;
+    margin: 30px;
 }
 .card1 h2{
     text-align: center;
@@ -148,6 +150,12 @@ main img{
     padding-top: 20px;
     font-family: 'Bebas Neue';
     font-size: 40px;
+}
+.cards p{
+    margin: 7px;
+}
+.card1 p {
+    margin: 7px;
 }
 .spot{
     grid-column: 1/13;
