--- a/styles/base.css
+++ b/styles/base.css
@@ -10,7 +10,8 @@ body{
 header {
     background-color: #283618;
     display: grid;
-    grid-template-columns: 1fr 1fr
+    grid-template-columns: 1fr 1fr;
+    margin-top: -54px;
 }
 
 .there{
