--- a/scoots/styles/base.css
+++ b/scoots/styles/base.css
@@ -1,18 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Poller+One&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
-body{
+body {
     width: 100%;
     height: 100%;
     margin: 0px;
 }
-header{
+
+header {
     background-color: rgba(0, 213, 246, 0.904);
     font-family: 'poller one';
     height: 150px;
     width: 100%;
     margin-top: -54px;
 }
-header h1{
+
+header h1 {
     color: orange;
     text-align: center;
     display: flex;
@@ -22,29 +24,35 @@ header h1{
     margin: 0px;
     font-size: 100px;
 }
-nav div{
+
+nav div {
     width: fit-content;
     font-size: large;
     margin-top: 15px;
 }
-nav img{
+
+nav img {
     width: 30px;
     vertical-align: middle;
 }
-.facebook{
+
+.facebook {
     text-decoration: none;
     color: black;
     padding: 14px;
     margin-top: 15px;
 }
-nav div :hover{
+
+nav div :hover {
     background-color: orange;
 }
-nav{
+
+nav {
     display: flex;
     justify-content: space-between;
 }
-.links{
+
+.links {
     width: 77%;
     display: flex;
     justify-content: space-between;
@@ -53,54 +61,65 @@ nav{
     font-size: larger;
     margin-top: 4px;
 }
-.links a{
+
+.links a {
     text-decoration: none;
     color: black;
     padding: 14px;
 }
-.links :hover{
+
+.links :hover {
     background-color: orange;
 }
-.links a::before{
+
+.links a::before {
     content: "|";
     margin-left: 5px;
     margin-right: 5px;
     color: black;
 }
-.links a::after{
+
+.links a::after {
     content: "|";
     margin-left: 5px;
     margin-right: 5px;
     color: black;
 }
-main{
+
+main {
     display: grid;
-    grid-template-columns: repeat(12,1fr);
-    grid-template-rows: repeat(6,auto);
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(6, auto);
 }
-.main-img{
+
+.main-img {
     grid-row: 1/2;
     grid-column: 1/8;
     width: 100%;
     height: 99.0%;
     margin-top: 5px;
 }
-.ress{
+
+.ress {
     grid-row: 1;
     grid-column: 8/13;
-    background-color: rgba(0, 213, 246, 0.904);      /*rgb(0, 171, 205)*/
+    background-color: rgba(0, 213, 246, 0.904);
+    /*rgb(0, 171, 205)*/
     margin-top: 5px;
 }
-.ress h2{
+
+.ress h2 {
     text-align: center;
     font-size: xx-large;
 }
-.ress p{
+
+.ress p {
     text-align: center;
     font-size: larger;
     margin: 50px;
 }
-.weather{
+
+.weather {
     grid-row: 5/9;
     grid-column: 1/13;
     background-color: orange;
@@ -109,7 +128,8 @@ main{
     align-items: center;
     justify-content: center;
 }
-.current{
+
+.current {
     background-color: rgba(0, 213, 246, 0.904);
     width: 300px;
     height: 200px;
@@ -119,15 +139,18 @@ main{
     justify-content: center;
     align-items: center;
 }
-.current h2{
+
+.current h2 {
     font-size: larger;
     margin: 0px;
     margin-top: 15px;
 }
-.current img{
+
+.current img {
     width: 80px;
 }
-.next-day{
+
+.next-day {
     background-color: rgba(0, 213, 246, 0.904);
     width: 300px;
     height: 200px;
@@ -137,7 +160,8 @@ main{
     justify-content: center;
     align-items: center;
 }
-.next-day div{
+
+.next-day div {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -145,14 +169,16 @@ main{
     margin: 10px;
     margin-bottom: 20px;
 }
-.reservation{
+
+.reservation {
     grid-row: 2;
     grid-column: 8/13;
     background-color: rgba(0, 213, 246, 0.904);
     margin-top: 50px;
     height: auto;
 }
-.reservation h2{
+
+.reservation h2 {
     margin: 10px;
     color: black;
     font-size: xx-large;
@@ -161,12 +187,14 @@ main{
     justify-content: center;
     text-align: center;
 }
-.reservation div{
+
+.reservation div {
     display: flex;
     justify-content: center;
     margin-top: 112px;
 }
-.reservation button{
+
+.reservation button {
     height: 150px;
     width: 300px;
     font-size: xx-large;
@@ -174,10 +202,12 @@ main{
     cursor: pointer;
     font-family: 'poller one';
 }
-.reservation button:hover{
+
+.reservation button:hover {
     background-color: white;
     color: #000;
 }
+
 .reservation p {
     text-align: center;
     margin: 5px;
@@ -186,45 +216,51 @@ main{
 }
 
 /*------------------- this is for all the images near the weather----------------*/
-.images-{
+.images- {
     grid-row: 2;
     grid-column: 1/8;
     margin-top: 50px;
     display: grid;
-    grid-template-columns: repeat(12,1fr);
-    grid-template-rows: repeat(12,1fr);
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(12, 1fr);
 }
-.boat-water{
+
+.boat-water {
     width: 100%;
     height: 100%;
     grid-column: 1/5;
     grid-row: 1/5;
 }
-.photo-1{
+
+.photo-1 {
     height: 100%;
     width: 100%;
     grid-column: 5/9;
     grid-row: 1/5;
 }
-.photo-2{
+
+.photo-2 {
     height: 100%;
     width: 100%;
     grid-column: 9/13;
     grid-row: 1/5;
 }
-.photo-3{
+
+.photo-3 {
     height: 100%;
     width: 100%;
     grid-column: 1/5;
     grid-row: 9/13;
 }
-.photo-4{
+
+.photo-4 {
     height: 100%;
     width: 100%;
     grid-column: 5/9;
     grid-row: 9/13;
 }
-.photo-5{
+
+.photo-5 {
     height: 100%;
     width: 100%;
     grid-column: 9/13;
@@ -232,40 +268,45 @@ main{
 }
 
 /*-------------------------- this is for the map-------------------*/
-.location{
+.location {
     grid-row: 3;
     grid-column: 1/13;
     background: linear-gradient(to bottom, rgba(0, 213, 246, 0.904) 50%, orange 50%);
     margin-top: 50px;
     display: grid;
-    grid-template-columns: repeat(12,1fr);
-    grid-template-rows: repeat(12,auto);
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(12, auto);
     margin-left: 25px;
     margin-right: 25px;
 
 }
-.location p{
+
+.location p {
     grid-row: 2;
     grid-column: 1/13;
     text-align: center;
     font-size: x-large;
 }
-.location h3{
+
+.location h3 {
     grid-row: 1;
     grid-column: 1/13;
     text-align: center;
     font-size: xx-large;
 }
-.map{
+
+.map {
     margin: 25px;
     grid-row: 4;
     grid-column: 2/12;
 }
-.map iframe{
+
+.map iframe {
     width: 100%;
 }
+
 /*-------------------------- this is the footer-------------------*/
-footer{
+footer {
     grid-row: 7;
     grid-column: 1/13;
     background-color: rgba(0, 213, 246, 0.904);
@@ -274,8 +315,9 @@ footer{
     margin-top: 50px;
     font-size: x-large;
 }
+
 /*-------------------the temp max---------------*/
-#the-temp-max{
+#the-temp-max {
     position: absolute;
     position: sticky;
     width: 21%;
@@ -284,16 +326,53 @@ footer{
     top: 5px;
     background-color: orange;
 }
-.temp-max{
+
+.temp-max {
     position: absolute;
     top: -17px;
     left: 4px;
 }
-.temp-max:hover{
+
+.temp-max:hover {
     cursor: pointer;
 }
-#temp-max{
+
+#temp-max {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+/* -----------------------------------------------this is the start of the rentals page------------------------------------*/
+
+.services {
+    grid-row: 1;
+    grid-column: 4/10;
+    text-align: center;
+    font-size: xxx-large;
+}
+
+.agreements-box {
+    grid-row: 2/3;
+    grid-column: 4/10;
+    height: 800px;
+    background-color: rgba(0, 213, 246, 0.904);
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: 30px auto auto auto auto auto 30px;
+}
+
+.services-w-descriptions {
+    grid-column: 2/12;
+    grid-row: 2/7;
+    background-color: orange;
+    font-size: x-large;
+}
+
+table {
+    grid-row: 4/6;
+    grid-column: 2/12;
+    margin-top: 50px;
+    width: 100%;
+    height: 600px;
 }
