--- a/scoots/styles/base.css
+++ b/scoots/styles/base.css
@@ -43,10 +43,6 @@ nav img {
     margin-top: 15px;
 }
 
-nav div :hover {
-    background-color: orange;
-}
-
 nav {
     display: flex;
     justify-content: space-between;
@@ -89,7 +85,7 @@ nav {
 main {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(6, auto);
+    grid-template-rows: repeat(10, auto);
 }
 
 .main-img {
@@ -370,9 +366,81 @@ footer {
 }
 
 table {
-    grid-row: 4/6;
+    grid-row: 4;
     grid-column: 2/12;
     margin-top: 50px;
     width: 100%;
     height: 600px;
+}
+td{
+    text-align: center;
+}
+tr{
+    background-color: lightgray;
+}
+.p1{
+    grid-row: 5;
+    grid-column: 2/3;
+    text-align: center;
+}
+.scoot1{
+    grid-row: 6;
+    grid-column: 2/3;
+    width: 200px;
+    height: 200px;
+}
+.p2{
+    grid-row: 5;
+    grid-column: 6/8;
+    text-align: center;
+}
+.scoot2{
+    grid-row: 6;
+    grid-column: 6/8;
+    width: 200px;
+    height: 200px;
+}
+.p3{
+    grid-row: 5;
+    grid-column: 11/12;
+    text-align: center;
+}
+.scoot3{
+    grid-row: 6;
+    grid-column: 11/12;
+    width: 200px;
+    height: 200px;
+}
+.p4{
+    grid-row: 7;
+    grid-column: 2/3;
+    text-align: center;
+}
+.scoot4{
+    grid-row: 8;
+    grid-column: 2/3;
+    width: 200px;
+    height: 200px;
+}
+.p5{
+    grid-row: 7;
+    grid-column: 6/8;
+    text-align: center;
+}
+.scoot5{
+    grid-row: 8;
+    grid-column: 6/8;
+    width: 200px;
+    height: 200px;
+}
+.p6{
+    grid-row: 7;
+    grid-column: 11/12;
+    text-align: center;
+}
+.scoot6{
+    grid-row: 8;
+    grid-column: 11/12;
+    width: 200px;
+    height: 200px;
 }
