--- a/scoots/styles/medium.css
+++ b/scoots/styles/medium.css
@@ -3,7 +3,8 @@
         font-size: x-large;
     }
     nav div{
-        width: 11%;
+        display: flex;
+        flex-direction: column;
     }
     #the-temp-max{
         height: fit-content;
@@ -14,6 +15,20 @@
     }
     .agreements-box{
         grid-column: 1/13;
+    }
+    .contact{
+        grid-column: 2/12;
+        grid-row: 2;
+        margin-right: 0px;
+        margin-top: 50px;
+    }
+    .rectangel-1{
+        grid-row: 1;
+        grid-column: 2/12;
+        margin-left: 0px;
+    }
+    .location{
+        height: auto;
     }
 }
 @media only screen and (min-width: 641px) and (max-width: 900px){
@@ -56,7 +71,22 @@
         grid-row: 4;
     }
     nav div{
-        width: 15%;
+        display: flex;
+        flex-direction: column;
+    }
+    .the-box{
+        grid-row: 1;
+        grid-column: 1/13;
+    }
+    form{
+        grid-row: 2;
+        grid-column: 1/13;
+        margin-top: 50px;
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+    .location{
+        height: auto;
     }
 }
 
@@ -64,6 +94,9 @@
     .links::before{
         content: '≡';
         font-size: 50px;
+    }
+    header h1{
+        font-size: 75px;
     }
     .links a{
         display: none;
@@ -79,7 +112,8 @@
         
     }
     nav div{
-        width: 28%;
+        display: flex;
+        flex-direction: column;
     }
     nav div :hover{
         background-color: none;
@@ -155,6 +189,7 @@
     }
     .location{
         grid-row: 7;
+        height: auto;
     }
     .weather{
         grid-row: 2/4;
@@ -234,5 +269,27 @@
     }
     .services-w-descriptions {
         font-size: larger;
+    }
+    .contact{
+        grid-column: 1/13;
+        grid-row: 2;
+        margin-right: 0px;
+        margin-top: 50px;
+    }
+    .rectangel-1{
+        grid-row: 1;
+        grid-column: 1/13;
+        margin-left: 0px;
+    }
+    .the-box{
+        grid-row: 1;
+        grid-column: 1/13;
+    }
+    form{
+        grid-row: 2;
+        grid-column: 1/13;
+        margin-top: 50px;
+        margin-left: 0px;
+        margin-right: 0px;
     }
 }
