--- a/scoots/styles/base.css
+++ b/scoots/styles/base.css
@@ -384,6 +384,10 @@ table {
     margin-top: 50px;
     width: 100%;
     height: 600px;
+    border-collapse: collapse;
+    border: 1px solid #000000;
+    margin-left: auto;
+    margin-right: auto;
 }
 td{
     text-align: center;
