--- a/scoots/styles/base.css
+++ b/scoots/styles/base.css
@@ -392,12 +392,17 @@ table {
     border: 1px solid #000000;
     margin-left: auto;
     margin-right: auto;
+    
 }
 td{
     text-align: center;
+    padding: 5px; 
+    border: 1px solid #000000;
 }
 tr{
     background-color: lightgray;
+    padding: 5px; 
+    border: 1px solid #000000;
 }
 .p1{
     grid-row: 5;
@@ -485,6 +490,7 @@ tr{
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: 30px auto auto auto auto auto 30px;
+    margin-left: 10px;
 }
 .description-1{
     grid-column: 2/12;
