--- a/scoots/styles/base.css
+++ b/scoots/styles/base.css
@@ -609,7 +609,7 @@ fieldset{
     grid-column: 8/13;
     margin-right: 50px;
 }
-#fac{
+#fac,#fac1,#fac2,#fac3,#fac4{
     margin-top: 40px;
 }
 .location-1{
