--- a/scoots/styles/base.css
+++ b/scoots/styles/base.css
@@ -15,7 +15,7 @@ header {
 }
 
 header h1 {
-    color: orange;
+    color: black;
     text-align: center;
     display: flex;
     justify-content: center;
