--- a/scoots/styles/medium.css
+++ b/scoots/styles/medium.css
@@ -102,6 +102,24 @@
         grid-row: 4;
         grid-column: 1/13;
     }
+    .photo-2{
+        display: none;
+    }
+    .boat-water{
+        grid-column: 1/7;
+    }
+    .photo-1{
+        grid-column: 7/13;
+    }
+    .photo-5{
+        display: none;
+    }
+    .photo-4{
+        grid-column: 7/13;
+    }
+    .photo-3{
+        grid-column: 1/7;
+    }
 }
 
 @media only screen and (min-width:200px) and (max-width:641px){
